# hand_tracking_dependencies

./: .gitignore  CMakeLists.txt  README.md
cmake/: FlatBuffers.cmake  NEON_2_SSE.cmake  absl.cmake  egl_headers.cmake  farmhash.cmake  fft2d.cmake  flatbuffers.cmake  fp16_headers.cmake  gemmlowp.cmake  ml_dtypes.cmake  protobuf.cmake  pthreadpool.cmake  reports.cmake  ruy.cmake  tensorflow-lite.cmake  tfl-XNNPACK.cmake
cmake/egl_headers/: egl_headersConfig.cmake.in
cmake/farmhash/: CMakeLists.txt  farmhash.patch  farmhashConfig.cmake.in
cmake/fft2d/: CMakeLists.txt  fft2d.patch  fft2dConfig.cmake.in
cmake/ml_dtypes/: CMakeLists.txt  ml_dtypes.patch  ml_dtypesConfig.cmake.in
cmake/pthreadpool/: pthreadpool.patch  pthreadpoolConfig.cmake.in
